tests/ui/once_time_attr_renamed.stderr
error: `time` was renamed to `ttl` in cached 1.0; use `ttl = ...`
 --> tests/ui/once_time_attr_renamed.rs:4:4
  |
4 | fn my_fn(k: i32) -> i32 {
  |    ^^^^^
